# Navestidlo

./: AppTheme.qml  CMakeLists.txt  CMakeLists.txt.user.1592f88  CMakeLists.txt.user.18fa138  CMakeLists.txt.user.bacf2b3  CMakeLists.txt.user.e35ba3a  Main.qml  Návěstidlo.sln  README.md  VzhledAplikace.qml  aboutapp.qml  androidbridge.cpp  androidbridge.h  appicon.aps  comboboxhandler.cpp  comboboxhandler.h  dbinfo.cpp  dbinfo.h  files.qrc  main.cpp  mainp.qml  navest.qml  ostnav.qml  ostnavdata.cpp  ostnavdata.h  oznp.qml  rychnavdata.cpp  rychnavdata.h  rychs.qml  settings.cpp  settings.h  soubory.qrc  splitstr.cpp  splitstr.h  sqlmodel.cpp  sqlmodel.h  svetelna.db  systemtheme.h  version.h.in  zaknav.qml  (+2 more)
ConsoleApp1/: ConsoleApp1.csproj
ConsoleApp1/Properties/: AssemblyInfo.cs
Návěstidlo/: App.config  App.xaml  App.xaml.cs  AssemblyInfo.cs  MainWindow.xaml  MainWindow.xaml.cs  Návěstidlo.csproj
Návěstidlo/Properties/: Settings.Designer.cs  Settings.settings
Návěstidlo/Resources/: data.xml
Návěstidlo/controls/: hamburgermenu.xaml  hamburgermenu.xaml.cs
Návěstidlo/data/: files.Designer.cs  files.resx
Návěstidlo/data/themes/: dark.xaml  light.xaml
Návěstidlo/stranky/: Nastaveni.xaml  Nastaveni.xaml.cs  Navestp.xaml  Navestp.xaml.cs  Rychsoust.xaml  Rychsoust.xaml.cs  main.xaml  main.xaml.cs  oaplikaci.xaml  oaplikaci.xaml.cs  stop.xaml  stop.xaml.cs  teorie.xaml  teorie.xaml.cs  test.xaml  test.xaml.cs
android/: AndroidManifest.xml
android/res/values/: styles.xml
components/: VzhledAplikace.qml
db/: main.db  ostatni.db  svetelna.db
images/: Thumbs.db
images/oznpasy/: oznp-st.svgz
ios/: ._Info.plist  ._StartScreen.storyboard  Info.plist  StartScreen.storyboard
ios/Assets.xcassets/: ._Contents.json
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Assets.xcassets/logo.imageset/: ._Contents.json
macos/: ._Info.plist  AppIcon.icns  Info.plist
pages/: AboutDesktop.qml  RoundedBackground.qml  aboutapp.qml  mainp.qml  nahlasitchybu.qml  nahlasitchybuMobile.qml  navest.qml  navestMobile.qml  ostatni.qml  ostnav.qml  oznp.qml  rychs.qml  rychsDesktop.qml  rychsMobile.qml  testy.qml  zaknav.qml
